@@ -25,7 +25,6 @@ import rbasamoyai.createbigcannons.cannons.CannonContraptionProviderBlock;
 import rbasamoyai.createbigcannons.cannons.InteractableCannonBlock;
 import rbasamoyai.createbigcannons.cannons.ItemCannonBehavior;
 import rbasamoyai.createbigcannons.cannons.autocannon.material.AutocannonMaterial;
-import rbasamoyai.createbigcannons.crafting.casting.CannonCastShape;
 import rbasamoyai.createbigcannons.crafting.welding.WeldableBlock;
 
 public interface AutocannonBlock extends WeldableBlock, CannonContraptionProviderBlock, InteractableCannonBlock {
@@ -33,15 +32,7 @@ public interface AutocannonBlock extends WeldableBlock, CannonContraptionProvide
     AutocannonMaterial getAutocannonMaterial();
     default AutocannonMaterial getAutocannonMaterialInLevel(LevelAccessor level, BlockState state, BlockPos pos) { return this.getAutocannonMaterial(); }
 
-    CannonCastShape getCannonShape();
-    default CannonCastShape getCannonShapeInLevel(LevelAccessor level, BlockState state, BlockPos pos) { return this.getCannonShape(); }
-
-    Direction getFacing(BlockState state);
-
-    default boolean canConnectToSide(BlockState state, Direction face) { return this.getFacing(state).getAxis() == face.getAxis(); }
-
     boolean isBreechMechanism(BlockState state);
-    boolean isComplete(BlockState state);
 
     default void onRemoveCannon(BlockState state, Level level, BlockPos pos, BlockState newState, boolean isMoving) {
         if (!(state.getBlock() instanceof AutocannonBlock cBlock) || state.is(newState.getBlock())) return;
@@ -55,7 +46,7 @@ public interface AutocannonBlock extends WeldableBlock, CannonContraptionProvide
             }
         }
 
-        if (cBlock.canConnectToSide(state, facing)) {
+        if (this.canConnectToSide(state, facing)) {
             BlockPos pos1 = pos.relative(facing);
             BlockState state1 = level.getBlockState(pos1);
             BlockEntity be1 = level.getBlockEntity(pos1);
@@ -69,7 +60,7 @@ public interface AutocannonBlock extends WeldableBlock, CannonContraptionProvide
             }
         }
 
-        if (cBlock.canConnectToSide(state, opposite)) {
+        if (this.canConnectToSide(state, opposite)) {
             BlockPos pos2 = pos.relative(opposite);
             BlockState state2 = level.getBlockState(pos2);
             BlockEntity be2 = level.getBlockEntity(pos2);
