@@ -24,6 +24,7 @@ Fixed:
 - Fixed tracer not rendering for Drop Mortar Shell
 - Fixed initial projectile chunkloading breaking Valkyrien Skies Quick-Firing Breeches
 - Fixed illegal autocannon connections on creative block placement
+- Fixed cannon casting connecting blocks that shouldn't connect
 
 ===
 
